# folder_watcher

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
.github/workflows/: build.yml  build_and_run_tests.yml
include/folder_watcher/: folder_watcher.hpp
src/: File.hpp  FolderWatcher.cpp  FolderWatcher.hpp  folder_watcher.cpp  utils.hpp
tests/: CMakeLists.txt  imgui.ini  tests.cpp
tests/watched/: file1.txt  file2.txt
tests/watched/folder1/: folder1_file1.txt  folder1_file2.txt
tests/watched/folder2/: folder2_file1.txt
tests/watched/folder3/: folder3_file1.txt
